Updated task to interpolate files using texplate format

--- a/tasks/tfstate-interpolate/task.yml
+++ b/tasks/tfstate-interpolate/task.yml
@@ -5,6 +5,7 @@ inputs:
 - name: tf_state
 - name: tasks # contains the product configuration file
 - name: texplate
+- name: jq
 - name: files
 
 outputs:
