Fixed task image ref

--- a/pipelines/foundation-install/pipeline.yml
+++ b/pipelines/foundation-install/pipeline.yml
@@ -450,7 +450,7 @@ jobs:
       interpolated-files: config-interpolated
 
   - task: configure-pas-vm-exts
-    image: pcf-automation
+    image: pcf-automation-image
     file: pcf-aws-automation/tasks/config-pas-vm-exts/task.yml
     input_mapping:
       env: env-interpolated
