--- a/config/product/config/director.yml
+++ b/config/product/config/director.yml
@@ -3,31 +3,31 @@ az-configuration:
 - name: ((az2))
 - name: ((az3))
 director-configuration:
-  allow_legacy_agents: true
-  blobstore_type: local
-  bosh_recreate_on_next_deploy: false
-  bosh_recreate_persistent_disks_on_next_deploy: false
-  database_type: internal
-  director_worker_count: 5
-  encryption:
-    keys: []
-    providers: []
-  hm_emailer_options:
-    enabled: false
-  hm_pager_duty_options:
-    enabled: false
-  identification_tags: {}
-  keep_unreachable_vms: false
-  local_blobstore_options:
-    tls_enabled: true
+  # allow_legacy_agents: true
+  # blobstore_type: local
+  # bosh_recreate_on_next_deploy: false
+  # bosh_recreate_persistent_disks_on_next_deploy: false
+  # database_type: internal
+  # director_worker_count: 5
+  # encryption:
+  #   keys: []
+  #   providers: []
+  # hm_emailer_options:
+  #   enabled: false
+  # hm_pager_duty_options:
+  #   enabled: false
+  # identification_tags: {}
+  # keep_unreachable_vms: false
+  # local_blobstore_options:
+  #   tls_enabled: true
   ntp_servers_string: ((ntp_servers))
-  post_deploy_enabled: false
-  resurrector_enabled: false
-  retry_bosh_deploys: false
-  skip_director_drain: true
+  # post_deploy_enabled: false
+  # resurrector_enabled: false
+  # retry_bosh_deploys: false
+  # skip_director_drain: true
 iaas-configuration:
   access_type: aws-keys
-  encrypted: false
+  # encrypted: false
   access_key_id: ((aws_access_key_id))
   secret_access_key: ((aws_secret_access_key))
   key_pair_name: ((key_pair_name))
@@ -43,23 +43,23 @@ network-assignment:
 networks-configuration:
   icmp_checks_enabled: false
   networks: ((networks-configuration))
-resource-configuration:
-  compilation:
-    instances: automatic
-    instance_type:
-      id: automatic
-    internet_connected: false
-  director:
-    instances: automatic
-    persistent_disk:
-      size_mb: automatic
-    instance_type:
-      id: automatic
-    internet_connected: false
-security-configuration:
-  generate_vm_passwords: true
-  opsmanager_root_ca_trusted_certs: true
-syslog-configuration:
-  enabled: false
-vmextensions-configuration: []
+# resource-configuration:
+#   compilation:
+#     instances: automatic
+#     instance_type:
+#       id: automatic
+#     internet_connected: false
+#   director:
+#     instances: automatic
+#     persistent_disk:
+#       size_mb: automatic
+#     instance_type:
+#       id: automatic
+#     internet_connected: false
+# security-configuration:
+#   generate_vm_passwords: true
+#   opsmanager_root_ca_trusted_certs: true
+# syslog-configuration:
+#   enabled: false
+# vmextensions-configuration: []
 
