--- a/tasks/test-task/task.yml
+++ b/tasks/test-task/task.yml
@@ -6,5 +6,7 @@ image_resource:
   source:
     repository: pcfnorm/rootfs
     tag: 1.0.20
+inputs:
+  - name: pcf-aws-automation
 run:
   path: pcf-aws-automation/tasks/test-task/task.sh
