--- a/config/pipelines/params-iaas-pave-test.yml
+++ b/config/pipelines/params-iaas-pave-test.yml
@@ -1,5 +1,6 @@
 ---
 terraform_repo: https://github.com/ob1-sc/tf-test
-automation_repo: git@github.com:ob1-sc/pcf-aws-automation.git
+automation_repo: https://github.com/ob1-sc/pcf-aws-automation
 env_name: tf-test
 aws_region: eu-west-1
+artifacts_bucket: siob-platform-automation
