--- a/pipelines/iaas-pave-test/pipeline.yml
+++ b/pipelines/iaas-pave-test/pipeline.yml
@@ -13,15 +13,6 @@ resources:
     uri: ((automation_repo))
     branch: master
 
-- name: platform-automation-image
-  type: s3
-  source:
-    access_key_id: ((access_key_id))
-    secret_access_key: ((secret_access_key))
-    region_name: ((aws_region))
-    bucket: ((artifacts_bucket))
-    regexp: platform-automation-image-(.*).tgz
-
 jobs:
 
 - name: pave-iaas
@@ -29,9 +20,6 @@ jobs:
   - aggregate:
     - get: pcf-aws-automation
     - get: aws-terraform
-    - get: platform-automation-image
-      params:
-        unpack: true
 
   - task: create-infrastructure
     file: pcf-aws-automation/tasks/prepare-aws-test/task.yml
@@ -39,4 +27,5 @@ jobs:
       ENV_NAME: ((env_name))
       AWS_ACCESS_KEY_ID: ((access_key_id))
       AWS_SECRET_ACCESS_KEY: ((secret_access_key))
+      AWS_SESSION_TOKEN: ((session_token))
       AWS_REGION: ((aws_region))
