Added missing task var

--- a/tasks/prepare-aws-test/task.yml
+++ b/tasks/prepare-aws-test/task.yml
@@ -13,6 +13,7 @@ params:
   ENV_NAME:
   AWS_ACCESS_KEY_ID:
   AWS_SECRET_ACCESS_KEY:
+  AWS_SESSION_TOKEN:
   AWS_REGION:
 run:
   path: pcf-aws-automation/tasks/prepare-aws-test/task.sh
